<resources>
    <string name="app_name">wanAndroid_myy</string>
    <string name="my_collect">我的收藏</string>
    <string name="nav_todo">TODO</string>
    <string name="nav_night_mode">夜间模式</string>
    <string name="nav_day_mode">日间模式</string>
    <string name="setting">设置</string>
    <string name="about_us">关于</string>
    <string name="logout">退出登录</string>
    <string name="login_in">登录</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="scale_down_show_behavior" translatable="false">com.forgetsky.wanandroid.widget.behavior.ScaleDownShowBehavior</string>
    <!-- Search -->
    <string name="action_search">搜索</string>
    <string name="history_search">搜索历史</string>
    <string name="hot_search">热搜</string>
    <string name="useful_sites">常用网站</string>
    <string name="clear_all">全部清除</string>
    <string name="search_tint">发现更多精彩内容</string>
    <string name="search_null_tint">快去搜索更多干货吧</string>

    <!-- Login -->
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="no_account">没有账号？前去注册</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="logout_fail">退出登录失败</string>
    <string name="enter_password_again">确认密码</string>
    <string name="have_account">已有账号，前去登录</string>
    <string name="username_not_empty">用户名不能为空</string>
    <string name="password_not_empty">密码不能为空</string>
    <string name="re_password_not_empty">确认密码不能为空</string>
    <string name="twice_password_not_same">两次输入的密码不同，请重新设置</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败</string>
    <string name="logging_in">正在登录…</string>
    <string name="logging_out">正在退出…</string>
    <string name="registering">正在注册…</string>
    <string name="login_first">请先登录</string>

    <!-- home pager -->
    <string name="home_pager">主页</string>
    <string name="knowledge_hierarchy">知识体系</string>
    <string name="wx_article">公众号</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>
    <string name="failed_to_obtain_article_list">获取文章列表失败</string>
    <string name="failed_to_obtain_banner_data">获取广告栏内容失败</string>
    <string name="article_top">置顶</string>
    <string name="article_new">新</string>

    <!-- collect -->
    <string name="collect">收藏</string>
    <string name="cancel_collect">已取消收藏</string>
    <string name="failed_to_obtain_collect_list">获取收藏文章失败</string>
    <string name="failed_to_cancel_collect">取消收藏失败</string>
    <string name="collect_success">收藏成功</string>
    <string name="collect_failed">收藏失败</string>

    <!-- Common -->
    <string name="http_error">网络异常</string>
    <string name="unKnown_error">位置错误</string>
    <string name="double_click_exit_toast">再按一次退出WanAndroid</string>
    <string name="loading">加载中…</string>
    <string name="failed_to_get_navigation_data">获取导航数据失败</string>
    <string name="failed_to_get_project_data">获取项目数据失败</string>
    <string name="failed_to_get_knowledge_hierarchy_data">获取知识体系数据失败</string>
    <string name="failed_to_get_wx_chapters_data">获取公众号数据失败</string>
    <string name="in_the_process">正在开发中，敬请期待</string>

    <string name="cache_setting">缓存设置</string>
    <string name="clear_cache">清空缓存</string>

    <!-- Article detail -->
    <string name="share">分享</string>
    <string name="open_it_with_browser">用浏览器打开</string>
    <string name="write_permission_not_allowed">获取读写权限失败</string>

    <!-- about -->
    <string name="about_upgrade">检查更新</string>
    <string name="about_website">关于网站</string>
    <string name="about_source_code">APK源码</string>
    <string name="about_copyright">版权声明</string>
    <string name="about_feedback">意见反馈</string>
    <string name="copyright_content">本APP完全开源，仅供学习交流，不可用于任何商业用途。</string>

    <!-- todo -->
    <string name="todo_title">TODO</string>
    <string name="todo">待办</string>
    <string name="done_todo">已完成</string>
    <string name="todo_all">全部</string>
    <string name="todo_work">工作</string>
    <string name="todo_study">学习</string>
    <string name="todo_life">生活</string>
    <string name="todo_other">其他</string>
    <string name="failed_to_obtain_todo_list">获取TODO数据失败</string>
    <string name="tv_add_todo_title">标题:</string>
    <string name="tv_add_todo_content">详情:</string>
    <string name="tv_add_todo_label">标签:</string>
    <string name="tv_add_todo_priority">优先级:</string>
    <string name="tv_add_todo_date">日期:</string>
    <string name="hint_add_todo_not_null">必填</string>
    <string name="hint_add_todo_null_able">非必填</string>
    <string name="todo_no_label">无标签</string>
    <string name="todo_priority_1">重要</string>
    <string name="todo_priority_2">一般</string>
    <string name="todo_edit_title">编辑</string>
    <string name="todo_new_title">新建</string>
    <string name="bt_todo_save">保存</string>
    <string name="bt_choose_label">选择标签</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="add_todo_success">已保存</string>
    <string name="add_todo_failed">保存失败</string>
    <string name="update_todo_success">已更新</string>
    <string name="update_todo_failed">更新失败</string>
    <string name="update_todo_status_success">操作成功</string>
    <string name="update_todo_status_failed">操作失败</string>
    <string name="delete_todo_success">删除成功</string>
    <string name="delete_todo_failed">删除失败</string>
    <string name="saving">正在保存…</string>
    <string name="marked_completed">标为已完成</string>
    <string name="marked_todo">标为未完成</string>
    <string name="delete_todo">删除</string>
    <string name="confirm_delete_todo">确认删除？</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
