<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <ImageView
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher"
            android:layout_margin="10dp"
            android:layout_width="80dp"
            android:layout_height="80dp" />

        <EditText
            android:id="@+id/et_username"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="38dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_login"
            android:text="@string/login"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_login_bg"
            android:textColor="@color/main_text_color"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_account"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>