<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.AboutActivity"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:drawableTop="@mipmap/ic_launcher_round"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/item_title"
            android:textSize="16sp" />
        <android.support.v7.widget.CardView
            android:id="@+id/about_upgrade"
            android:layout_marginTop="50dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/card_view_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:textSize="16sp"
                android:text="@string/about_upgrade"
                android:textColor="@color/item_title" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/about_website"
            android:layout_marginTop="1dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/card_view_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:textSize="16sp"
                android:text="@string/about_website"
                android:textColor="@color/item_title" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/about_source_code"
            android:layout_marginTop="1dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/card_view_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:textSize="16sp"
                android:text="@string/about_source_code"
                android:textColor="@color/item_title" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/about_feedback"
            android:layout_marginTop="1dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/card_view_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:textSize="16sp"
                android:text="@string/about_feedback"
                android:textColor="@color/item_title" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/about_copyright"
            android:layout_marginTop="1dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/card_view_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:textSize="16sp"
                android:text="@string/about_copyright"
                android:textColor="@color/item_title" />
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>